radarr/Manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  replicas: 1
  serviceName: radarr
  template:
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - name: ui
          containerPort: 7878
        volumeMounts:
        - name: radarr-storage
          mountPath: /config
  volumeClaimTemplates:
  - metadata:
      name: radarr-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
