radarr/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 7878
    targetPort: 7878
    protocol: TCP
